More CSS fixes lol
- Added mini-spacers to first logo group container on top & bottom
- removed animation for last two links in the footer, they were router links and they had overlapping CSS with navbar links

--- a/source/src/css/components/Routing/NavLinks.css
+++ b/source/src/css/components/Routing/NavLinks.css
@@ -9,14 +9,14 @@
 
     padding: 0.4em; 
 }
-.active {
+.navlink.active {
     color: #e95420;
 }
-.inactive {
+.navlink.inactive {
     color: #ffffff;
     animation: navlink-hover-off 0.15s;
 }
-.inactive:hover {
+.navlink.inactive:hover {
     color: #e95420;
     animation: navlink-hover-on 0.15s;
 }
